fix error text position, add z-index on modal window

--- a/src/sass/components/_section-cards.scss
+++ b/src/sass/components/_section-cards.scss
@@ -8,6 +8,8 @@
   margin-right: auto;
   margin-left: auto;
 
+  min-height: 210px;
+
   @media (min-width: $tablet) {
     width: 610px;
   }
